Changed splash screen text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="addBtnTxt">Add</string>
     <string name="bagSelectionTxt">Choose A Bag</string>
     <string name="deleteItemTxt">Delete Item</string>
-    <string name="splashTxt">Trip Packer</string>
+    <string name="splashTxt">Trip Packer2</string>
 </resources>
